Fix mobile overflow

--- a/src/css/wp-gp-tools-style.css
+++ b/src/css/wp-gp-tools-style.css
@@ -175,7 +175,7 @@ span.small {
 }
 
 .wpgpt-update-notice{
-	width: 600px;
+	width: 60%;
     margin: 25px auto;
     display: block;
     color: #000000;
